add a table for projects and put them in a grid

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <div class="container">
 
-      <div class="top row">
-        <div class="row">
+        <div class="row" id="top row">
           <div class="col-md-6">
             <h1>Joel<br>Stockamp</h1>
           </div>
@@ -18,14 +17,8 @@
             <img src="media/Joel.jpg" alt="Picture of Joel Stockamp" class="profile-photo">
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="Projects">
 
-        </div>
-
-      </div>
 
 
 
