add image styling to index and added more styling to table

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <div class="container">
 
         <div class="row" id="top row">
-          <div class="col-md-6">
+          <div class="col-md-8">
             <h1>Joel<br>Stockamp</h1>
           </div>
-          <div class="col-md-6">
-            <img src="media/Joel.jpg" alt="Picture of Joel Stockamp" class="profile-photo">
+          <div class="col-md-4">
+            ​<picture>
+              <source srcset="media/joel.jpg" type="image/svg+xml">
+              <img src="media/joel.jpg" class="img-fluid img-thumbnail" alt="...">
+            </picture>
           </div>
         </div>
 
