--- a/test.html
+++ b/test.html
@@ -7,25 +7,80 @@
     <title>test-Portfolio Landing Page</title>
   </head>
   <body>
+    <div class="container">
 
 
+
+
+
+
+
+
+      <div class="row" id="projects">
+        <div class="row" id=project1>
+          <div class="col-md-2">
+            <!-- spacer col -->
+          </div>
+          <div class="col-md-2" id="p-name">
+            <p>Mock wiki</p>
+            <p>
+              <a href="https://github.com/stockampj/mock-wiki">
+                <img src="media/link.png" alt="web link icon" class="link-icon" >
+              </a>
+            </p>
+          </div>
+          <div class="col-md-4" id='p-desc'>
+            <p>This Project was an attempt to emunlate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
+          </div>
+          <div class="col-md-2" id="p-info">
+            <h4>Languages/Tools</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <!-- spacer col -->
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title">Mock wiki</h2>
+        </div>
+        <div class="panel-body">
+          <div class="col-md-8" id='p-desc'>
+            <p>This Project was an attempt to emunlate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
+          </div>
+          <div class="col-md-2" id="p-info">
+            <ul class="list-group">
+              <li class="list-group-item">HTML</li>
+              <li class="list-group-item">CSS</li>
+              <li class="list-group-item">Bootstrap</li>
+            </ul>
+          </div>
+          <div class="col-md-2" id="p-name">
+            <a href="https://github.com/stockampj/mock-wiki">
+              <img src="media/link.png" alt="web link icon" class="link-icon" >
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+
+
+      ​<picture>
+        <source srcset="media/joel.jpg" type="image/svg+xml">
+        <img src="media/joel.jpg" class="img-fluid img-thumbnail" alt="...">
+      </picture>
+
+
+
+    </div>
   </body>
 </html>
-
-
-<div class="row" id="projects">
-  <div class="col-md-2">
-  </div>
-  <div class="col-md-2" id="p-name">
-    <p>name</p>
-    <p>link</p>
-  </div>
-  <div class="col-md-4" id='p-desc'>
-    <p>description</p>
-  </div>
-  <div class="col-md-2" id="p-info">
-    <p>languages etc</p>
-  </div>
-  <div class="col-md-2">
-  </div>
-</div>
