--- a/test.html
+++ b/test.html
@@ -50,22 +50,67 @@
 
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h2 class="panel-title">Mock wiki</h2>
+          <h2 class="panel-title">Mock Wikipedia Site</h2>
         </div>
         <div class="panel-body">
-          <div class="col-md-8" id='p-desc'>
+          <div class="col-md-8" id='wiki-desc'>
             <p>This Project was an attempt to emunlate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
           </div>
-          <div class="col-md-2" id="p-info">
+          <div class="col-md-2" id="wiki-info">
             <ul class="list-group">
               <li class="list-group-item">HTML</li>
               <li class="list-group-item">CSS</li>
               <li class="list-group-item">Bootstrap</li>
             </ul>
           </div>
-          <div class="col-md-2" id="p-name">
+          <div class="col-md-2" id="wiki-link">
             <a href="https://github.com/stockampj/mock-wiki">
-              <img src="media/link.png" alt="web link icon" class="link-icon" >
+              <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
+              <img src="media/link.png" alt="web link icon" class="img-thumbnail">
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title">Column Testing</h2>
+        </div>
+        <div class="panel-body">
+          <div class="col-md-8" id='column-desc'>
+            <p>This is a test site I made to explore using columns in conjunction with float styling in CSS. The images were designed to emulate responsive designs</p>
+          </div>
+          <div class="col-md-2" id="column-info">
+            <ul class="list-group">
+              <li class="list-group-item">HTML</li>
+              <li class="list-group-item">CSS</li>
+            </ul>
+          </div>
+          <div class="col-md-2" id="column-link">
+            <a href="https://github.com/stockampj/column-test">
+              <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
+              <img src="media/link.png" alt="web link icon" class="img-thumbnail">
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title">Resort Page</h2>
+        </div>
+        <div class="panel-body">
+          <div class="col-md-8" id='resort-desc'>
+            <p>This was an attempt to make a page with multiple links and a navigation bar using html and css. The nav bar uses buttons, but we made the display slightly inconsistent so the user may have difficulty with it.</p>
+          </div>
+          <div class="col-md-2" id="resort-info">
+            <ul class="list-group">
+              <li class="list-group-item">HTML</li>
+              <li class="list-group-item">CSS</li>
+            </ul>
+          </div>
+          <div class="col-md-2" id="resort-link">
+            <a href="https://github.com/stockampj/resort-page">
+              <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
+              <img src="media/link.png" alt="web link icon" class="img-thumbnail">
             </a>
           </div>
         </div>
@@ -74,10 +119,7 @@
 
 
 
-      ​<picture>
-        <source srcset="media/joel.jpg" type="image/svg+xml">
-        <img src="media/joel.jpg" class="img-fluid img-thumbnail" alt="...">
-      </picture>
+
 
 
 
