--- a/test.html
+++ b/test.html
@@ -10,76 +10,44 @@
     <div class="container">
 
 
-<div class="row" id="projects">
+<div class="row" id="about-me">
   <div class="panel panel-default">
-  <div class="panel-heading">
-    <h2 class="panel-title">Projects</h2>
-  </div>
-  <div class="panel-body">
-    <div class="row" id="Wikipedia Mockup">
-      <div class="project-row">
-        <div class="col-md-8" id="wiki-description">
-          <h4>Mock Wikipedia Site</h4>
-          <p>This Project was an attempt to emunlate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
-        </div>
-        <div class="col-md-2" id="wiki-tools">
-          <ul class="list-group">
-            <li class="list-group-item">HTML</li>
-            <li class="list-group-item">CSS</li>
-            <li class="list-group-item">Bootstrap</li>
-          </ul>
-        </div>
-        <div class="col-md-2" id="wiki-link">
-          <a href="https://github.com/stockampj/mock-wiki">
-            <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
-            <img src="media/link.png" alt="web link icon" class="img-thumbnail">
-          </a>
-        </div>
-      </div>
+    <div class="panel-heading">
+      <h2 class="panel-title">About Me</h2>
     </div>
-    <div class="row" id="Column Testing">
-      <div class="project-row">
-        <div class="col-md-8" id="column-description">
-          <h4>Column Testing Site</h4>
-          <p>This is a test site I made to explore using columns in conjunction with float styling in CSS. The images were designed to emulate responsive designs</p>
-        </div>
-        <div class="col-md-2" id="column-tools">
-          <ul class="list-group">
-            <li class="list-group-item">HTML</li>
-            <li class="list-group-item">CSS</li>
-          </ul>
-        </div>
-        <div class="col-md-2" id="column-link">
-          <a href="https://github.com/stockampj/column-test">
-            <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
-            <img src="media/link.png" alt="web link icon" class="img-thumbnail">
-          </a>
-        </div>
+    <div class="panel-body">
+      <div class="info">
+          <h4>Background</h4>
+          <p>as;dflaksdflk</p>
       </div>
-    </div>
-    <div class="row" id="Resort Page">
-      <div class="project-row">
-        <div class="col-md-8" id="resort-description">
-          <h4>Resort Page</h4>
-          <p>This was an attempt to make a page with multiple links and a navigation bar using html and css. The nav bar uses buttons, but we made the display slightly inconsistent so the user may have difficulty with it.</p>
-        </div>
-        <div class="col-md-2" id="resort-tools">
-          <ul class="list-group">
-            <li class="list-group-item">HTML</li>
-            <li class="list-group-item">CSS</li>
+      <div class="info">
+          <h4>Education</h4>
+          <ul>
+            <li>BA History: Oregon State University</li>
+            <li>MDiv: Fuller Theological Seminary</li>
           </ul>
-        </div>
-        <div class="col-md-2" id="resort-link">
-          <a href="https://github.com/stockampj/resort-page">
-            <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
-            <img src="media/link.png" alt="web link icon" class="img-thumbnail">
-          </a>
-        </div>
       </div>
+      <div class="info">
+          <h4>Job Experience</h4>
+          <ul>
+            <li>Copyright and eReserves Wrangler: David Allen Hubbard Library</li>
+            <li>Audio/Visual Tech: Fuller Theolocial Seminary</li>
+            <li>Worship Director: One Voice and The Well Church</li>
+          </ul>
+          <div class="info">
+              <h4>Why Programming?</h4>
+              <p>A lot of my work has been with fields that are adjacent to the tech industry. While I was in a library environment, I did a lot of trouble-shooting for users as they attempted to access and use our various databases. In that work I occasionally encountered pieces of code that I would take and use elsewhere. I've always been curious about the programming and I decided to take the plunge by diving into a boot camp at Epicodus in PDX.</p>
+          </div>
+      </div>
+
+
     </div>
   </div>
 </div>
-</div>
+
+
+
+
 
 
 
