--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
 
-        <div class="row" id="top row">
+        <div class="row" id="top-row">
           <div class="col-md-8">
             <h1>Joel<br>Stockamp</h1>
           </div>
