added interests section and images

--- a/test.html
+++ b/test.html
@@ -10,49 +10,33 @@
     <div class="container">
 
 
-<div class="row" id="about-me">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h2 class="panel-title">About Me</h2>
-    </div>
-    <div class="panel-body">
-      <div class="info">
-          <h4>Background</h4>
-          <p>as;dflaksdflk</p>
-      </div>
-      <div class="info">
-          <h4>Education</h4>
-          <ul>
-            <li>BA History: Oregon State University</li>
-            <li>MDiv: Fuller Theological Seminary</li>
-          </ul>
-      </div>
-      <div class="info">
-          <h4>Job Experience</h4>
-          <ul>
-            <li>Copyright and eReserves Wrangler: David Allen Hubbard Library</li>
-            <li>Audio/Visual Tech: Fuller Theolocial Seminary</li>
-            <li>Worship Director: One Voice and The Well Church</li>
-          </ul>
-          <div class="info">
-              <h4>Why Programming?</h4>
-              <p>A lot of my work has been with fields that are adjacent to the tech industry. While I was in a library environment, I did a lot of trouble-shooting for users as they attempted to access and use our various databases. In that work I occasionally encountered pieces of code that I would take and use elsewhere. I've always been curious about the programming and I decided to take the plunge by diving into a boot camp at Epicodus in PDX.</p>
+      <div class="row" id="interests">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Things I Enjoy</h2>
           </div>
+          <div class="panel-body">
+            <div class="info">
+                <h4>My Family</h4>
+                <p>I'm married to the wonderful Heather Stockamp. Honestly, she's the best person I know and I'd be completely lost without her. When she's not running our latest RPG crawl, she can be found exploring traversing the digital worlds of the Bungie and Bethesda.</p>
+                <br>
+                <p>Kima is my faithful hiking companion and my best non-human friend. She's pretty laid-back, but watch out if you have a ball! She <strong><em>will</em></strong> get it.</p>
+            </div>
+            <div class="info">
+                <h4>Digital Art</h4>
+                <p>I've recently been teaching myself how to create digital vector artwork using Inkscape.  </p>
+            </div>
+            <div class="info">
+                <h4>Hiking</h4>
+                <p>When I get the opportunity to leave the city, I'm usually headed to the mountains with Kima in tow. We like to tackle dog-frindly hikes throughout the PNW.</p>
+              <div class="info">
+                  <h4>Music</h4>
+                  <p>I've been playing music with solo and with groups for the last 15 years. I've started to get into recording and composing on my own using Reason. Piano and Guitar are my outlets when I can't get to the mountains.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-
-
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-
-
-
 
     </div>
   </body>
