--- a/index.html
+++ b/index.html
@@ -10,16 +10,58 @@
     <div class="container">
 
         <div class="row" id="top-row">
-          <div class="col-md-8">
-            <h1>Joel<br>Stockamp</h1>
-          </div>
-          <div class="col-md-4">
-            ​<picture>
-              <source srcset="media/joel.png" type="image/svg+xml">
-              <img src="media/joel.png" class="img-fluid img-thumbnail" alt="...">
-            </picture>
+          <div class="col-md-12">
+            ​<img src="media/joel.png" alt="" class="joel">
+            <div class="title-page">
+              <h1>Joel<br>Stockamp</h1>
+            </div>
           </div>
         </div>
+
+
+        <div class="row" id="about-me">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">About Me</h2>
+            </div>
+            <div class="panel-body">
+              <div class="info">
+                  <h4>Background</h4>
+                  <p>I'm a Portland-based... sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+              </div>
+              <div class="info">
+                  <h4>Education</h4>
+                  <ul>
+                    <li>BA History: Oregon State University</li>
+                    <li>MDiv: Fuller Theological Seminary</li>
+                  </ul>
+              </div>
+              <div class="info">
+                  <h4>Job Experience</h4>
+                  <ul>
+                    <li>Copyright and eReserves Wrangler: David Allen Hubbard Library</li>
+                    <li>Audio/Visual Tech: Fuller Theolocial Seminary</li>
+                    <li>Worship Director: One Voice and The Well Church</li>
+                  </ul>
+                  <div class="info">
+                      <h4>Why Programming?</h4>
+                      <p>A lot of my work has been with fields that are adjacent to the tech industry. While I was in a library environment, I did a lot of trouble-shooting for users as they attempted to access and use our various databases. In that work I occasionally encountered pieces of code that I would take and use elsewhere. I've always been curious about the programming and I decided to take the plunge by diving into a boot camp at Epicodus in PDX.</p>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
 
         <div class="row" id="projects">
           <div class="panel panel-default">
