--- a/index.html
+++ b/index.html
@@ -56,13 +56,6 @@
 
 
 
-
-
-
-
-
-
-
         <div class="row" id="projects">
           <div class="panel panel-default">
           <div class="panel-heading">
@@ -135,7 +128,41 @@
         </div>
 
 
-
+        <div class="row" id="interests">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">Things I Enjoy</h2>
+            </div>
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-md-4">
+                    <h4>My Family</h4>
+                    <p>I'm married to the wonderful Heather Stockamp. Honestly, she's the best person I know and I'd be completely lost without her. When she's not running our latest RPG crawl, she can be found exploring traversing the digital worlds of the Bungie and Bethesda.</p>
+                    <p>Kima is my faithful hiking companion and my best non-human friend. She's pretty laid-back, but watch out if you have a ball! She <strong><em>will</em></strong> get it.</p>
+                </div>
+                <div class="col-md-4">
+                  <h4>Music</h4>
+                  <p>I've been playing music with solo and with groups for the last 15 years. I've started to get into recording and composing on my own using Reason. Piano and Guitar are my outlets when I can't get to the mountains.</p>
+                </div>
+                <div class="col-md-4">
+                  <h4>Digital Art</h4>
+                  <p>I've recently been teaching myself how to create digital vector artwork using Inkscape.</p>
+                  <br>
+                  <h4>Hiking</h4>
+                  <p>When I get the opportunity to leave the city, I'm usually headed to the mountains with Kima in tow. We like to tackle dog-frindly hikes throughout the PNW.</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="media">
+                  <img src="media/heather.jpg" alt="My wife Heather" >
+                  <img src="media/kima.jpg" alt="My dog kima" >
+                  <img src="media/stars.png" alt="starscape" >
+                  <img src="media/hiking.jpg" alt="Tom Dick and Harry Peak">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
 
