add ol to music portion.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
               <div class="info">
                   <h4>Job Experience</h4>
                   <ul>
-                    <li>Copyright and eReserves Wrangler: David Allen Hubbard Library</li>
-                    <li>Audio/Visual Tech: Fuller Theolocial Seminary</li>
-                    <li>Worship Director: One Voice and The Well Church</li>
+                    <li><span class="job">Copyright and eReserves Wrangler</span>: David Allen Hubbard Library</li>
+                    <li><span class="job">Audio/Visual Tech</span>: Fuller Theolocial Seminary</li>
+                    <li><span class="job">Music Director</span>: One Voice and The Well Church</li>
                   </ul>
                   <div class="info">
                       <h4>Why Programming?</h4>
@@ -142,7 +142,12 @@
                 </div>
                 <div class="col-md-4">
                   <h4>Music</h4>
-                  <p>I've been playing music with solo and with groups for the last 15 years. I've started to get into recording and composing on my own using Reason. Piano and Guitar are my outlets when I can't get to the mountains.</p>
+                  <p>I've been playing music with solo and with groups for the last 15 years. I've started to get into recording and composing on my own using Reason. Piano and Guitar are my outlets when I can't get to the mountains. Bands that currently have my attention.</p>
+                  <ol>
+                    <li>Jamestown Revival</li>
+                    <li>Larkin Poe</li>
+                    <li>Lake Street Dive</li>
+                  </ol>
                 </div>
                 <div class="col-md-4">
                   <h4>Digital Art</h4>
@@ -156,8 +161,8 @@
                 <div class="media">
                   <img src="media/heather.jpg" alt="My wife Heather" >
                   <img src="media/kima.jpg" alt="My dog kima" >
-                  <img src="media/stars.png" alt="starscape" >
-                  <img src="media/hiking.jpg" alt="Tom Dick and Harry Peak">
+
+                  <img src="media/hiking.jpg" alt="Tom Dick and Harry Peak" >
                 </div>
               </div>
             </div>
