Added some header styling.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div class="container">
-
         <div class="row" id="top-row">
           <div class="col-md-12">
             ​<img src="media/joel.png" alt="" class="joel">
@@ -17,10 +16,8 @@
             </div>
           </div>
         </div>
-
-
         <div class="row" id="about-me">
-          <div class="panel panel-default">
+          <div class="panel panel-info">
             <div class="panel-heading">
               <h2 class="panel-title">About Me</h2>
             </div>
@@ -51,11 +48,6 @@
             </div>
           </div>
         </div>
-
-
-
-
-
         <div class="row" id="projects">
           <div class="panel panel-default">
           <div class="panel-heading">
@@ -78,7 +70,7 @@
                 <div class="col-md-2" id="wiki-link">
                   <a href="https://github.com/stockampj/mock-wiki">
                     <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
-                    <img src="media/link.png" alt="web link icon" class="img-thumbnail">
+                    <img src="media/link.png" alt="web link icon" class="link-logo">
                   </a>
                 </div>
               </div>
@@ -98,7 +90,7 @@
                 <div class="col-md-2" id="column-link">
                   <a href="https://github.com/stockampj/column-test">
                     <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
-                    <img src="media/link.png" alt="web link icon" class="img-thumbnail">
+                    <img src="media/link.png" alt="web link icon" class="link-logo">
                   </a>
                 </div>
               </div>
@@ -118,7 +110,7 @@
                 <div class="col-md-2" id="resort-link">
                   <a href="https://github.com/stockampj/resort-page">
                     <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
-                    <img src="media/link.png" alt="web link icon" class="img-thumbnail">
+                    <img src="media/link.png" alt="web link icon" class="link-logo">
                   </a>
                 </div>
               </div>
@@ -126,10 +118,8 @@
           </div>
         </div>
         </div>
-
-
         <div class="row" id="interests">
-          <div class="panel panel-default">
+          <div class="panel panel-success">
             <div class="panel-heading">
               <h2 class="panel-title">Things I Enjoy</h2>
             </div>
@@ -142,7 +132,7 @@
                 </div>
                 <div class="col-md-4">
                   <h4>Music</h4>
-                  <p>I've been playing music with solo and with groups for the last 15 years. I've started to get into recording and composing on my own using Reason. Piano and Guitar are my outlets when I can't get to the mountains. Bands that currently have my attention.</p>
+                  <p>I've been playing music with solo and with groups for the last 15 years. I've started to get into recording and composing on my own using Reason. Piano and Guitar are my outlets when I can't get to the mountains. Bands that currently have my attention:</p>
                   <ol>
                     <li>Jamestown Revival</li>
                     <li>Larkin Poe</li>
@@ -168,21 +158,6 @@
             </div>
           </div>
         </div>
-
-
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
   </body>
 </html>
