--- a/test.html
+++ b/test.html
@@ -10,36 +10,114 @@
     <div class="container">
 
 
-      <div class="row" id="interests">
+
+
+      <div class="row" id="projects">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2 class="panel-title">Things I Enjoy</h2>
+            <h2 class="panel-title">Projects</h2>
           </div>
           <div class="panel-body">
-            <div class="row">
-              <div class="col-md-4">
-                  <h4>My Family</h4>
-                  <p>I'm married to the wonderful Heather Stockamp. Honestly, she's the best person I know and I'd be completely lost without her. When she's not running our latest RPG crawl, she can be found exploring traversing the digital worlds of the Bungie and Bethesda.</p>
-                  <p>Kima is my faithful hiking companion and my best non-human friend. She's pretty laid-back, but watch out if you have a ball! She <strong><em>will</em></strong> get it.</p>
-              </div>
-              <div class="col-md-4">
-                <h4>Music</h4>
-                <p>I've been playing music with solo and with groups for the last 15 years. I've started to get into recording and composing on my own using Reason. Piano and Guitar are my outlets when I can't get to the mountains.</p>
-              </div>
-              <div class="col-md-4">
-                <h4>Digital Art</h4>
-                <p>I've recently been teaching myself how to create digital vector artwork using Inkscape.</p>
-                <br>
-                <h4>Hiking</h4>
-                <p>When I get the opportunity to leave the city, I'm usually headed to the mountains with Kima in tow. We like to tackle dog-frindly hikes throughout the PNW.</p>
+
+            <div class="row" id="Wikipedia Mockup">
+              <div class="project-row">
+                <div class="col-md-12" id="wiki-description">
+                  <div class="col-md-2" id="wiki-link">
+                    <a href="https://github.com/stockampj/mock-wiki">
+                      <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
+                      <img src="media/link.png" alt="web link icon" class="link-logo">
+                    </a>
+                  </div>
+                  <h4>Mock Wikipedia Site</h4>
+                  <p>This Project was an attempt to emunlate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
+                </div>
+
               </div>
             </div>
-            <div class="row">
-              <div class="media">
-                <img src="media/heather.jpg" alt="My wife Heather" >
-                <img src="media/kima.jpg" alt="My dog kima" >
-                <img src="media/stars.png" alt="starscape" >
-                <img src="media/hiking.jpg" alt="Tom Dick and Harry Peak">
+
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="row" id="projects">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Projects</h2>
+          </div>
+          <div class="panel-body">
+            <div class="row" id="Wikipedia Mockup">
+              <div class="project-row">
+                <div class="col-md-8" id="wiki-description">
+                  <h4>Mock Wikipedia Site</h4>
+                  <p>This Project was an attempt to emunlate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
+                </div>
+                <div class="col-md-2" id="wiki-tools">
+                  <ul class="list-group">
+                    <li class="list-group-item">HTML</li>
+                    <li class="list-group-item">CSS</li>
+                    <li class="list-group-item">Bootstrap</li>
+                  </ul>
+                </div>
+                <div class="col-md-2" id="wiki-link">
+                  <a href="https://github.com/stockampj/mock-wiki">
+                    <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
+                    <img src="media/link.png" alt="web link icon" class="link-logo">
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="row" id="Column Testing">
+              <div class="project-row">
+                <div class="col-md-8" id="column-description">
+                  <h4>Column Testing Site</h4>
+                  <p>This is a test site I made to explore using columns in conjunction with float styling in CSS. The images were designed to emulate responsive designs</p>
+                </div>
+                <div class="col-md-2" id="column-tools">
+                  <ul class="list-group">
+                    <li class="list-group-item">HTML</li>
+                    <li class="list-group-item">CSS</li>
+                  </ul>
+                </div>
+                <div class="col-md-2" id="column-link">
+                  <a href="https://github.com/stockampj/column-test">
+                    <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
+                    <img src="media/link.png" alt="web link icon" class="link-logo">
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="row" id="Resort Page">
+              <div class="project-row">
+                <div class="col-md-8" id="resort-description">
+                  <h4>Resort Page</h4>
+                  <p>This was an attempt to make a page with multiple links and a navigation bar using html and css. The nav bar uses buttons, but we made the display slightly inconsistent so the user may have difficulty with it.</p>
+                </div>
+                <div class="col-md-2" id="resort-tools">
+                  <ul class="list-group">
+                    <li class="list-group-item">HTML</li>
+                    <li class="list-group-item">CSS</li>
+                  </ul>
+                </div>
+                <div class="col-md-2" id="resort-link">
+                  <a href="https://github.com/stockampj/resort-page">
+                    <!-- <img src="media/link.png" alt="web link icon" class="link-icon" > -->
+                    <img src="media/link.png" alt="web link icon" class="link-logo">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
