--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-md-7" id="structure1">
             <div class="row" id="about-me">
-              <div class="panel panel-info">
+              <div class="panel panel-default">
                 <div class="panel-heading">
                   <h2 class="panel-title">About Me</h2>
                 </div>
@@ -92,7 +92,7 @@
                               <img src="media/link.png" alt="web link icon" class="link-logo">
                             </a>
                           </div>
-                          <p>This Project was an attempt to emunlate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
+                          <p>This Project was an attempt to emulate the structure and styling of the wikipedia page using the skills we developed in the first week of my course at Epicodus. A focus was placed on using the grid system and the styling elements of bootstrap.</p>
                         </div>
                       </div>
                     </div>
@@ -147,7 +147,7 @@
           </div>
           <div class="col-md-4" id="structure2">
             <div class="row" id="interests">
-              <div class="panel panel-success">
+              <div class="panel panel-default">
                 <div class="panel-heading">
                   <h2 class="panel-title">Things I Enjoy</h2>
                 </div>
@@ -156,7 +156,7 @@
                     <div class="interests-content">
                         <h4>My Family</h4>
                         <img src="media/heather.jpg" alt="My wife Heather" class="media" > <img src="media/kima.jpg" alt="My dog kima" class="media" >
-                        <p>I'm married to the wonderful Heather Stockamp. Honestly, she's the best person I know and I'd be completely lost without her. When she's not running our latest RPG crawl, she can be found exploring traversing the digital worlds of the Tamriel and Destiny.</p>
+                        <p>I'm married to the wonderful Heather Stockamp. Honestly, she's the best person I know and I'd be completely lost without her. When she's not running our latest RPG crawl or reading a fantasy novel, she can be found traversing the digital worlds of the Tamriel and Destiny.</p>
                         <p>Kima is my faithful hiking companion and my best non-human friend. She's pretty laid-back, but watch out if you have a ball! She <strong><em>will</em></strong> get it.</p>
                     </div>
                     <div class="interests-content">
